Fix curator view layout issues #275

--- a/components/frontend-web/src/app/components/current-track/current-track.component.scss
+++ b/components/frontend-web/src/app/components/current-track/current-track.component.scss
@@ -69,7 +69,7 @@
 }
 
 .track-genre-col {
-    padding: 0px;
+    padding: 0px 5px 0px 5px;
     min-width: 120px;
     max-width: 120px;
     margin: 0px;
@@ -132,8 +132,8 @@
 }
 
 .track-button-col {
-    min-width: 238;
-    //    background: #FF00FF;
+    min-width: 224;
+    // background: #FF00FF;
     padding: 0px;
     margin: 0px 0px 0px 0px;
 }
@@ -142,15 +142,16 @@
     //    font-size: 8px;
     max-height: 26px;
     vertical-align: middle;
-    margin-left: 30px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 .track-button-skip {
     //    font-size: 8px;
     max-height: 26px;
     vertical-align: middle;
-    margin-left: 40px;
-    margin-right: 30px;
+    margin-left: 25px;
+    margin-right: 47px;
 }
 
 .track-provider-col {
